--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_GGCM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_GGCM.cshtml
@@ -55,7 +55,7 @@
                 <span id="spanFWQY">服务区域</span>
             </div>
             <div class="div_row_right">
-                <input id="FWQY" column="FWQY" class="span_spaninput input_input SRK" type="text" placeholder="请输入服务区域"/>
+                <input id="FWQY" column="FWQY" class="span_spaninput input_input SRK" readonly="readonly" type="text" placeholder="请输入服务区域"/>
                 <div id="divFWQYTip" style="z-index:996"></div>
             </div>
         </div>
