--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/Shared/HTFB.cshtml
@@ -26,6 +26,7 @@
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/PageJson.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/HTFB_Common.js")></script>
     <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/FWQY.js")></script>
+    <script src=@Url.Content("~/Areas/Business/Scripts/Business/Common/XLBQ.js")></script>
     @RenderSection("Section_Head", false)
 }
 @section Section_Body {
