--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_YSPXJG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_YSPXJG.cshtml
@@ -64,7 +64,7 @@
                 <span id="spanFWQY">服务区域</span>
             </div>
             <div class="div_row_right">
-                <input id="FWQY" column="FWQY" class="span_spaninput input_input SRK" type="text" placeholder="请输入服务区域"/>
+                <input id="FWQY" column="FWQY" class="span_spaninput input_input SRK" readonly="readonly" type="text" placeholder="请输入服务区域"/>
                 <div id="div_row_right_fwqy" class="div_row_right_fwqy" style="z-index: 996;"></div>
             </div>
             <div id="divFWQYTip" style="z-index:995"></div>
