--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
@@ -46,23 +46,13 @@
                 <span class="spanFWCZ">小类</span>
             </div>
             <div class="div_row_right">
-                <div id="divXLText" class="div_select_out SRK" style="position: relative; z-index: 997">
+                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997">
                     <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择小类</span>
                         <div class="span_select_arrow"></div>
                     </div>
-                    <div id="divXL" class="div_bqss" style="display: none;">
-                        <div class="div_bqss_head">
-                            <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text"/>
-                            <input class="btn btn-info" type="button" value="快速搜索"/>
-                        </div>
-                        <div class="div_bqss_body">
-                            <div class="div_bqss_body_mc" id="div_bqss_body_mc">
-                            </div>
-                            <div class="div_bqss_body_bq" id="div_bqss_body_bq">
-                            </div>
-                        </div>
-                    </div>
+                </div>
+                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
                 </div>
             </div>
             <div id="divYLHHXLTip" class="Warn" style="z-index: 996"></div>
