--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
@@ -40,22 +40,22 @@
             </div>
             <div id="divOUTLBTip" class="Warn"></div>
         </div>
-        <div id="divYLHHXL" class="div_row" style="z-index: 998">
+        <div id="divOUTXLBQ" class="div_row" style="z-index: 998; display: none;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span class="spanFWCZ">小类</span>
             </div>
             <div class="div_row_right">
-                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997">
-                    <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择小类</span>
-                        <div class="span_select_arrow"></div>
+                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 472px;">
+                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 472px;">
+                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 440px; text-align: left;">请选择小类,最多可选4项</div>
+                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
                     </div>
                 </div>
                 <div id="div_row_right_xlbq" class="div_row_right_xlbq">
                 </div>
             </div>
-            <div id="divYLHHXLTip" class="Warn" style="z-index: 996"></div>
+            <div id="divYLHHXLBQTip" class="Warn" style="z-index: 996"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
