--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/HTFB_Common.css
@@ -165,11 +165,11 @@
 .div_row_right_xlbq .div_row_right_xlbq_top .img_row_right_xlbq_top_close{cursor: pointer;margin-top: 5px;margin-right: 5px; width: 20px;height: 20px;float: right;display: inline-block;}
 .div_row_right_xlbq .div_row_right_xlbq_left{ display: inline-block;width: 145px;height: 359px;border-right: 2px solid #cccccc;overflow-y: scroll;overflow-x: visible;}
 .div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left{ padding: 0;width: 126px;margin: 0;}
-.div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left .li_row_right_xlbq_left{height: 40px;width: 126px;display: block;background-color: #eeeff1;cursor: pointer;padding-top: 8px;padding-left: 10px;}
-.div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left .li_row_right_xlbq_left:hover{background-color: #d7d7d8;}
+.div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left .li_row_right_xlbq_left{height: 40px;width: 126px;display: block;background-color: #eeeff1;cursor: pointer;padding-top: 8px;padding-left: 50px;}
 .div_row_right_xlbq .div_row_right_xlbq_left .ul_row_right_xlbq_left .li_row_right_xlbq_left .img_row_right_xlbq_left{ margin-right: 2px;}
 .div_row_right_xlbq .div_row_right_xlbq_right{display: none;width: 323px;height: 360px;overflow-y: visible;overflow-x: visible;}
 .div_row_right_xlbq .div_row_right_xlbq_right .ul_row_right_xlbq_right{ width: 327px;height: 100%;padding: 0;margin: 0;overflow-y: scroll;overflow-x: visible;}
-.div_row_right_xlbq .div_row_right_xlbq_right .ul_row_right_xlbq_right .li_row_right_xlbq_right{ width: 140px;height: 40px;display: inline-block;float: left;padding: 4px 10px;cursor: pointer;}
+.div_row_right_xlbq .div_row_right_xlbq_right .ul_row_right_xlbq_right .li_row_right_xlbq_right{ width: 150px;height: 40px;display: inline-block;float: left;padding: 4px 10px;cursor: pointer;}
 .div_row_right_xlbq .div_row_right_xlbq_right .ul_row_right_xlbq_right .li_row_right_xlbq_right:hover{background-color: #eeeff1;}
 .div_row_right_xlbq .div_row_right_xlbq_right .ul_row_right_xlbq_right .li_row_right_xlbq_right .img_row_right_xlbq_right{ margin-right: 2px;}
+.div_XLBQ{float: left;width: auto;height: 28px;padding: 2px 8px;border: 1px solid #cccccc;display: inline-block;margin-right: 8px;}
