--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/NLMFY/NLMFY_YLHH.cshtml
@@ -30,7 +30,6 @@
             <div class="div_row_right">
                 <div id="divLBText" class="div_select_out SRK" style="position: relative;">
                     <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <input id="LBID" type="hidden"/>
                         <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                         <div class="span_select_arrow"></div>
                     </div>
@@ -55,7 +54,7 @@
                 <div id="div_row_right_xlbq" class="div_row_right_xlbq">
                 </div>
             </div>
-            <div id="divYLHHXLBQTip" class="Warn" style="z-index: 996"></div>
+            <div id="divOUTXLBQTip" class="Warn" style="z-index: 996"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
