--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_YM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_YM.cshtml
@@ -23,14 +23,14 @@
             </div>
         </div>
         <div id="divOUTXLBQ" class="div_row" style="z-index: 998;">
-            <div class="div_row_left font_two">
-                <span class="span_required">&nbsp;</span>
-                <span class="spanFWCZ">国家</span>
+            <div class="div_row_left">
+                <span class="span_required">*</span>
+                <span class="spanFWCZ">移民国家</span>
             </div>
             <div class="div_row_right">
                 <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 472px;">
                     <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 472px;">
-                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 440px; text-align: left;">请选择小类,最多可选2项</div>
+                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 440px; text-align: left;">请选择移民国家,最多可选2项</div>
                         <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
                     </div>
                 </div>
