--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FYSJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW/SWFW_FYSJ.cshtml
@@ -49,32 +49,22 @@
             </div>
             <div id="divXLTip"></div>
         </div>
-        <div id="divFYSJYZ" class="div_row" style="z-index: 998">
+        <div id="divOUTXLBQ" class="div_row" style="z-index: 998;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">语种</span>
             </div>
             <div class="div_row_right">
-                <div id="divYZText" class="div_select_out SRK">
-                    <div id="divYZSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanYZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择语种</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divYZ" class="div_bqss" style="display: none; z-index: 997; position: relative;">
-                        <div class="div_bqss_head">
-                            <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                            <input class="btn btn-info" type="button" value="快速搜索" />
-                        </div>
-                        <div class="div_bqss_body">
-                            <div class="div_bqss_body_mc" id="div_bqss_body_mc">
-                            </div>
-                            <div class="div_bqss_body_bq" id="div_bqss_body_bq">
-                            </div>
-                        </div>
+                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 472px;">
+                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 472px;">
+                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 440px; text-align: left;">请选择国家,最多可选2项</div>
+                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
                     </div>
                 </div>
+                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
+                </div>
             </div>
-            <div id="divFYSJYZTip" class="Warn" style="z-index: 996;"></div>
+            <div id="divOUTXLBQTip" class="Warn" style="z-index: 996"></div>
         </div>
         <div id="divFWQY" class="div_row" style="z-index: 996">
             <div class="div_row_left">
