--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_SP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_SP.cshtml
@@ -22,7 +22,7 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divSPLB" class="div_row" style="z-index: 999">
+        <div id="divOUTLB" class="div_row" style="z-index: 999">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">类别</span>
@@ -37,11 +37,11 @@
                     </div>
                 </div>
             </div>
-            <div id="divSPLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
+            <div id="divOUTLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
         </div>
         <div id="divXL" class="div_row" style="z-index: 996; display: none;">
             <div class="div_row_left font_two">
-                <span class="span_required">*</span>
+                <span class="span_required">&nbsp;</span>
                 <span id="spanXL">小类</span>
             </div>
             <div id="divXLText" class="div_row_right" style="position: relative;">
