--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_CY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ZSJM/ZSJM_CY.cshtml
@@ -147,7 +147,7 @@
         <div id="divZSDQ" class="div_row" style="z-index: 993;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span id="spanZSDQ">招商地区</span>
+                <span id="spanZSDQ">服务范围</span>
             </div>
             <div id="divZSDQText" class="div_row_right" style="position: relative;">
             </div>
