--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_FSXM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG/PFCG_FSXM.cshtml
@@ -37,16 +37,17 @@
                     <div id="divLB" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divXLText" class="div_select_out SRK" style="display: none">
-                    <div id="divXLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanXL" class="span_select spaninput_fontcolor" style="margin-top: 0px;">请选择小类</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divXL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
-                    </div>
-                </div>
             </div>
             <div id="divOUTLBTip" class="Warn"></div>
+        </div>
+        <div id="divXL" class="div_row" style="z-index: 996; display: none;">
+            <div class="div_row_left font_two">
+                <span class="span_required">&nbsp;</span>
+                <span id="spanXL">小类</span>
+            </div>
+            <div id="divXLText" class="div_row_right" style="position: relative;">
+            </div>
+            <div id="divXLTip" class="Warn" style="z-index: 998; position: relative;"></div>
         </div>
         <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
             <span class="span_split">特色描述</span>
