--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -758,7 +758,7 @@
                                     &nbsp;&nbsp;&nbsp;&nbsp;1、价格明显低于市场不少。<br />
                                     &nbsp;&nbsp;&nbsp;&nbsp;2、手机号码归属地与实际地点不符。<br />
                                     &nbsp;&nbsp;&nbsp;&nbsp;3、要求先付运费再发货（利润所在）。<br />
-                                    &nbsp;&nbsp;&nbsp;&nbsp;4、假扮成个人转让，玩腻了要卖，所以价格超低，在低价的基础上可以大幅度砍价。<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;4、假扮成个人，玩腻了要卖，所以价格超低，在低价的基础上可以大幅度砍价。<br />
                                     &nbsp;&nbsp;&nbsp;&nbsp;5、虽然有卖车理由，但卖车理由很牵强。<br />
                                     &nbsp;&nbsp;&nbsp;&nbsp;其次，为了交易的安全性、合法性，请严格遵循以下三点：<br />
                                     &nbsp;&nbsp;&nbsp;&nbsp;1、遵守法规：买受人购买出卖人的摩托车，必须符合国家颁布的摩托车质量标准，且必须是在《全国摩托车、民用改装车和摩托车生产企业及产品目录》上登记/备案的摩托车。<br />
