--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWG.cshtml
@@ -12,47 +12,37 @@
             <span class="span_split">基本信息</span>
             <em class="em_split"></em>
         </div>
-        <div id="divGQ" class="div_row">
+        <div id="divSF" class="div_row">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">身份</span>
             </div>
             <div class="div_row_right">
                 <div class="div_radio" id="div_sf_grzr">
-                    <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人转让</label>
+                    <img class="img_radio" id="img_sf_grzr" /><label class="label_radio">个人</label>
                 </div>
                 <div class="div_radio" id="div_sf_sjzr">
-                    <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家转让</label>
+                    <img class="img_radio" id="img_sf_sjzr" /><label class="label_radio">商家</label>
                 </div>
             </div>
-            <div id="divGQTip" class="Warn" style="z-index: 999; position: relative;"></div>
+            <div id="divSFTip" class="Warn" style="z-index: 999; position: relative;"></div>
         </div>
-        <div id="divCWGPZ" class="div_row" style="z-index: 998">
+        <div id="divOUTXLBQ" class="div_row" style="z-index: 998;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">品种</span>
             </div>
             <div class="div_row_right">
-                <div id="divPZText" class="div_select_out SRK" style="position: relative; z-index: 997;">
-                    <div id="divPZSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanPZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品种</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPZ" class="div_bqss" style="display: none;">
-                        <div class="div_bqss_head">
-                            <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                            <input class="btn btn-info" type="button" value="快速搜索" />
-                        </div>
-                        <div class="div_bqss_body">
-                            <div class="div_bqss_body_mc" id="div_content_cwgmc">
-                            </div>
-                            <div class="div_bqss_body_bq" id="div_content_cwgbq">
-                            </div>
-                        </div>
+                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 160px;">
+                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 160px;">
+                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 120px; text-align: left;">请选择品种</div>
+                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
                     </div>
                 </div>
+                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
+                </div>
             </div>
-            <div id="divCWGPZTip" class="Warn" style="z-index: 996; position: relative;"></div>
+            <div id="divOUTXLBQTip" class="Warn" style="z-index: 996"></div>
         </div>
         <div id="divJG" class="div_row" style="z-index: 995;">
             <div class="div_row_left font_two">
@@ -157,14 +147,14 @@
                     <div id="divYMQK" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
                 </div>
-                <div id="divYMZLText" class="div_select_out SRK" style="z-index: 981;">
+                @*<div id="divYMZLText" class="div_select_out SRK" style="z-index: 981;">
                     <div id="divYMZLSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                         <span id="spanYMZL" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择疫苗种类</span>
                         <div class="span_select_arrow"></div>
                     </div>
                     <div id="divYMZL" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                     </div>
-                </div>
+                </div>*@
             </div>
             <div id="divCWGYMQKTip" class="Warn" style="z-index: 980;"></div>
         </div>
