--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CW/CW_CWM.cshtml
@@ -27,25 +27,24 @@
             </div>
             <div id="divGQTip" class="Warn" style="z-index: 999; position: relative;"></div>
         </div>
-        <div id="divCWMPZ" class="div_row" style="z-index: 999">
+        <div id="divOUTXLBQ" class="div_row" style="z-index: 998;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">品种</span>
             </div>
             <div class="div_row_right">
-                <div id="divPZText" class="div_select_out SRK" style="z-index: 997;">
-                    <div id="divPZSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                        <span id="spanPZ" column="PZ" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择品种</span>
-                        <div class="span_select_arrow"></div>
-                    </div>
-                    <div id="divPZ" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                <div id="divXLBQ" class="div_select_out SRK" style="position: relative; z-index: 997; width: 160px;">
+                    <div id="divXLBQSpan" class="div_select_in" style="border: none; margin-top: 6px; width: 160px;">
+                        <div id="spanXLBQ" class="span_select spaninput_fontcolor" style="padding-left: 10px; margin-top: 0; width: 120px; text-align: left;">请选择品种</div>
+                        <div class="span_select_arrow" style="float: right; margin-top: 5px; margin-right: 10px;"></div>
                     </div>
                 </div>
-                <div id="divPZTip" class="Warn" style="z-index: 997; position: relative;"></div>
+                <div id="div_row_right_xlbq" class="div_row_right_xlbq">
+                </div>
             </div>
-            <div id="divCWMPZTip" class="Warn" style="z-index: 996; position: relative;"></div>
+            <div id="divOUTXLBQTip" class="Warn" style="z-index: 997"></div>
         </div>
-        <div id="divJG" class="div_row" style="z-index: 998;">
+        <div id="divJG" class="div_row" style="z-index: 996;">
             <div class="div_row_left font_two">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">价格</span>
@@ -56,7 +55,7 @@
                     <span class="spaninput_fontcolor">元/只</span>
                 </span>
             </div>
-            <div id="divJGTip" class="Warn" style="z-index: 998; position: relative;"></div>
+            <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
         </div>
         <div id="divSZQY" class="div_row" style="z-index: 991;">
             <div class="div_row_left">
