--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_MYFZMR_MRBJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES/ES_MYFZMR_MRBJ.cshtml
@@ -19,10 +19,10 @@
             </div>
             <div class="div_row_right">
                 <div class="div_radio" id="div_sf_grzr">
-                    <img class="img_radio" id="img_sf_grzr"/><label class="label_radio">个人转让</label>
+                    <img class="img_radio" id="img_sf_grzr"/><label class="label_radio">个人</label>
                 </div>
                 <div class="div_radio" id="div_sf_sjzr">
-                    <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家转让</label>
+                    <img class="img_radio" id="img_sf_sjzr"/><label class="label_radio">商家</label>
                 </div>
             </div>
             <div id="divGQTip" class="Warn" style="z-index: 996; position: relative;"></div>
