--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW/SHFW_BJ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW/SHFW_BJ.cshtml
@@ -142,7 +142,7 @@
                 </div>
                 <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
-            <div id="divBCMSTip" class="Warn"></div>
+            <div id="divSZQYTip" class="Warn"></div>
         </div>
         <div id="divLXR" class="div_row" style="z-index: 990">
             <div class="div_row_left font_three">
