--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_JJJG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_JJJG.cshtml
@@ -22,26 +22,14 @@
                 <div id="divBTTip"></div>
             </div>
         </div>
-        <div id="divSF" class="div_row">
-            <div class="div_row_left font_two">
+        <div id="divSKXS" class="div_row" style="z-index: 997;">
+            <div class="div_row_left">
                 <span class="span_required">*</span>
-                <span class="spanFWCZ">身份</span>
+                <span id="spanSKXS">授课形式</span>
             </div>
-            <div class="div_row_right">
-                <div id="div_sf_dxs" class="div_radio">
-                    <img class="img_radio" id="img_ysfw_gnhyzx"/><label class="label_radio">大学生</label>
-                </div>
-                <div id="div_sf_zyjs" class="div_radio">
-                    <img class="img_radio" id="img_sf_zyjs"/><label class="label_radio">专业教师</label>
-                </div>
-                <div id="div_sf_wj" class="div_radio">
-                    <img class="img_radio" id="img_sf_wj"/><label class="label_radio">外教</label>
-                </div>
-                <div id="div_sf_qt" class="div_radio">
-                    <img class="img_radio" id="img_sf_qt"/><label class="label_radio">其他</label>
-                </div>
+            <div id="divSKXSText" class="div_row_right">
             </div>
-            <div id="divSFTip"></div>
+            <div id="divSKXSTip"></div>
         </div>
         <div id="divFDJD" class="div_row" style="z-index: 997;">
             <div class="div_row_left">
