--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD/LYJD_CJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/LYJD/LYJD_CJY.cshtml
@@ -13,9 +13,9 @@
             <em class="em_split"></em>
         </div>
         <div id="divBT" class="div_row" style="margin-top: 22px;">
-            <div class="div_row_left">
+            <div class="div_row_left font_two">
                 <span class="span_required">*</span>
-                <span id="spanBT">线路名称</span>
+                <span id="spanBT">标题</span>
             </div>
             <div class="div_row_right">
                 <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
