--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_JJJG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/JYPX/JYPX_JJJG.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div id="divFDJDTip"></div>
         </div>
-        <div id="divFDKM" class="div_row" style="z-index: 997;">
+        <div id="divFDKM" class="div_row" style="z-index: 997;display: none">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span id="spanFDKM">辅导科目</span>
