--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL/CL_JC.cshtml
@@ -115,15 +115,32 @@
             </div>
             <div id="divJGTip" class="Warn" style="z-index: 984;"></div>
         </div>
-        <div id="divKCDZ" class="div_row" style="z-index: 983;">
+        <div id="divSZQY" class="div_row" style="z-index: 983;">
             <div class="div_row_left">
                 <span class="span_required">*</span>
                 <span class="spanFWCZ">看车地址</span>
             </div>
             <div class="div_row_right">
-                <input class="input_input" id="KCDZ" maxlength="50" column="KCDZ" type="text" />
+                <div id="divQYText" class="div_select_out SRK" style="z-index: 982;">
+                    <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <input type="hidden" id="QYCode" />
+                        <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <div id="divDDText" class="div_select_out SRK" style="z-index: 982;">
+                    <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
+                        <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
+                        <div class="span_select_arrow"></div>
+                    </div>
+                    <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
+                    </div>
+                </div>
+                <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
             </div>
-            <div id="divKCDZTip" class="Warn" style="z-index: 982;"></div>
+            <div id="divSZQYTip" class="Warn" style="z-index: 981;"></div>
         </div>
         <div id="divSFDQBY" class="div_row" style="z-index: 981;">
             <div class="div_row_left" style="margin-left: 9px;">
